--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-		<title>React App</title>
+		<title>My Collection - Collection Manager</title>
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
